llama index added for embeddings retrival and storing

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-EMBEDDING_MODEL= nomic-embed-text
-EMBEDDING_URL= http://localhost:11434/api/embeddings
+EMBEDDING_MODEL=nomic-embed-text
+EMBEDDING_URL=http://localhost:11434/api/embeddings
+OLLAMA_BASE_URL=http://localhost:11434
 
-PGHOST= localhost
-PGPORT= 5454
-PGDATABASE= embeddings_db
-PGUSER= postgres
-PGPASSWORD= 
+PGHOST=localhost
+PGPORT=5432
+PGDATABASE=embeddings
+PGUSER=db
+PGPASSWORD=
