added document reference and page number

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ OLLAMA_BASE_URL=http://localhost:11434
 PGHOST=localhost
 PGPORT=5432
 PGDATABASE=embeddings
-PGUSER=db
-PGPASSWORD=
+PGUSER=imad
+PGPASSWORD=123456789
