re-configuration of env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 EMBEDDING_MODEL=nomic-embed-text
-EMBEDDING_URL=http://localhost:11434/api/embeddings
-OLLAMA_BASE_URL=http://localhost:11434
+LLM_URL_EMBEDDING=http://localhost:11434/api/embeddings
+LLM_URL=http://localhost:11434
 
 PGHOST=localhost
 PGPORT=5432
