added authentication and user wise documents

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ PGPORT=5432
 PGDATABASE=embeddings
 PGUSER=imad
 PGPASSWORD=123456789
+
+# JWT Authentication
+SECRET_KEY=k6T4YvLBtccN_XskFhft2X2sZrGcj-1DguJBSXlO9r8
