--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,11 @@ uvicorn==0.38.0
 python-multipart==0.0.20
 starlette==0.50.0
 
+# Authentication
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.3.0
+
 # Environment and configuration
 python-dotenv==1.2.1
 
